Fix colliding className from Logo and CustomStatusPill components, fix image alt text (#727)

--- a/frontend/src/ui/components/ImageUploadField/styles.scss
+++ b/frontend/src/ui/components/ImageUploadField/styles.scss
@@ -99,7 +99,7 @@
     }
 }
 
-.tooltip {
+.image-upload-tooltip {
     padding-left: 130px;
     .tooltip-inner{
         background-color: $secondary-1;
